manifests/Modify_HTTP_response_headers/HTTP-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
      headers:
        response:
          add:
            hello: world
          remove:
          - "set-cookie"
